Finishing the function that add the attribute. The existing bugs : the file will be overwritten if it is not empty.